name:                bmm-simulate
version:             0.1.0.0
synopsis:            Simulate sequences according to the boundary mutation model
-- description:
homepage:            https://github.com/dschrempf/bmm-simulate#readme
license:             BSD3
license-file:        LICENSE
author:              Dominik Schrempf
maintainer:          dominik.schrempf@gmail.com
copyright:           Dominik Schrempf 2017
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CFWriter
                     , BndModel
                     , BndState
                     , DNAModel
                     , ExampleRTrees
                     , RateMatrix
                     , RTree
                     , Tools
                     , Transition
  build-depends:       MonadRandom >= 0.5.1
                     , base >= 4.7 && < 5
                     , hmatrix >= 0.18.0.0
                     , random >= 1.1
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

executable bmm-simulate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       MonadRandom >= 0.5.1
                     , base
                     , bmm-simulate
                     , hmatrix >= 0.18.0.0
                     , random >= 1.1
                     , vector >= 0.11.0.0
  default-language:    Haskell2010

test-suite bmm-simulate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       MonadRandom >= 0.5.1
                     , base
                     , bmm-simulate
                     , hmatrix >= 0.18.0.0
                     , random >= 1.1
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dschrempf/bmm-simulate
