name:                bmm-simulate
version:             0.1.0.0
synopsis:            Simulate sequences according to the boundary mutation model
-- description:
homepage:            https://github.com/dschrempf/bmm-simulate#readme
license:             BSD3
license-file:        LICENSE
author:              Dominik Schrempf
maintainer:          dominik.schrempf@gmail.com
copyright:           Dominik Schrempf 2017
category:            Science
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ArgParse
                     , CFWriter
                     , BndModel
                     , BndState
                     , Defaults
                     , Distribution
                     , DNAModel
                     , GammaRate
                     , RateMatrix
                     , RTree
                     , Tools
                     , Transition
  build-depends:       MonadRandom >= 0.5.1
                     , attoparsec >= 0.13.1.0
                     , base >= 4.7 && < 5
                     , distribution >= 1.1.1.0
                     , hmatrix >= 0.18.0.0
                     , integration >= 0.2.1
                     , optparse-applicative >= 0.13.2.0
                     , random >= 1.1
                     , random-fu >= 0.2.7.0
                     , statistics >= 0.13.3.0
                     , text >= 1.2.2.1
                     , transformers
                     , vector >= 0.11.0.0
  other-modules:       Paths_bmm_simulate
  default-language:    Haskell2010

executable bmm-simulate
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       MonadRandom >= 0.5.1
                     , attoparsec >= 0.13.1.0
                     , base
                     , bmm-simulate
                     , distribution >= 1.1.1.0
                     , hmatrix >= 0.18.0.0
                     , integration >= 0.2.1
                     , optparse-applicative >= 0.13.2.0
                     , random >= 1.1
                     , random-fu >= 0.2.7.0
                     , statistics >= 0.13.3.0
                     , text >= 1.2.2.1
                     , transformers
                     , vector >= 0.11.0.0
  other-modules:       Paths_bmm_simulate
  default-language:    Haskell2010

test-suite bmm-simulate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       MonadRandom >= 0.5.1
                     , attoparsec >= 0.13.1.0
                     , base
                     , bmm-simulate
                     , distribution >= 1.1.1.0
                     , hmatrix >= 0.18.0.0
                     , integration >= 0.2.1
                     , optparse-applicative >= 0.13.2.0
                     , random >= 1.1
                     , random-fu >= 0.2.7.0
                     , statistics >= 0.13.3.0
                     , text >= 1.2.2.1
                     , transformers
                     , vector >= 0.11.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dschrempf/bmm-simulate
